Fixed ugly scrollbar

--- a/andy.css
+++ b/andy.css
@@ -41,7 +41,6 @@ h1 {
 	min-width: 75%;
 	max-width: 75%;
 	display: inline-block;
-	overflow: scroll;
 }
 
 .textDiv h1 {
